--- a/css/style.production.css
+++ b/css/style.production.css
@@ -6,18 +6,20 @@
 */
 
 /*colors*/
-:root {  /* body   background color*/
-}
+/*:root {
+   body   background color
+}*/
+
 /* font */
 
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /*  Body */
 body {
-  font-family: 'Macondo', cursive;
+  font-family: 'sans-serif';
   font-weight: 400;
   font-size: 16px;
   /*Sets font size to 16px*/
@@ -27,13 +29,13 @@ body {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 50px;
   font-weight: 700;
   line-height: 1.2;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 36px;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -44,14 +46,29 @@ h3 {
   line-height: 1.2;
 }
 
+p {
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+li {
+  font-size: 20px;
+  font-weight: 200;
+  line-height: 1.2;
+}
+
 span {
   color: #b22222;
 }
+
 a {
   color: undefined;
+  font-size: 20px;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
 }
@@ -70,7 +87,7 @@ button {
   /* overwrites browser defaults and resets the border */
   border: none;
   /* takes the font from the outer container */
-  font-family: inherit;
+  font-family: sans-serif;
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
   background-color: #00008b;
   color: white;
@@ -82,7 +99,8 @@ button {
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
-button:hover, button:focus {
+button:hover,
+button:focus {
   cursor: pointer;
   opacity: 0.8;
 }
@@ -92,7 +110,113 @@ button:hover, button:focus {
   color: #2b2b2b;
 }
 
+/* Contact form on Contact page */
+.contact-form-div {
+  align-content: center;
+  padding: 0%;
+  display: flex;
+}
 
+fieldset {
+  margin: 2em 0;
+  padding: 1em 2em;
+  border: solid 1px #ccc;
+  border-radius: 6px;
+  min-width: 200px;
+}
+
+legend {
+  font-size: 1.25em;
+  padding: 0 .25em;
+  color: #00008b;
+}
+
+label {
+  display: block;
+  margin-top: 1em;
+}
+
+.checks label {
+  margin-top: 0;
+}
+
+label:first-of-type {
+  margin-top: 0;
+}
+
+/* Inputs and text area */
+input {
+  padding: .5em;
+  border: solid 1px #00008b;
+}
+
+input[type="email"],
+input[type="text"] {
+  width: 15em;
+}
+
+textarea {
+  min-height: 8em;
+  min-width: 100%;
+  padding: .5em;
+  border: solid 1px #00008b;
+}
+
+/* radio buttons and checkboxes */
+.checks {
+  margin-bottom: 1em;
+}
+
+.checks p {
+  margin-bottom: 0;
+}
+
+input[type="checkbox"]+label,
+input[type="radio"]+label {
+  display: inline-block;
+  padding-top: 0;
+  margin-top: 0;
+}
+
+input[type="radio"] {
+  margin-left: 1.5em;
+  margin-right: 0;
+}
+
+input[type="radio"]:first-of-type {
+  margin-left: 0;
+}
+
+/* Submit Button */
+input[type="submit"] {
+  padding: .5em 1em;
+  border-radius: 6px;
+  background-color: #00008b;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: .8em;
+}
+
+/* Large screen rules */
+@media screen and (min-width: 430px) {
+  legend {
+    font-size: 1.75em;
+  }
+
+  fieldset {
+    width: 40%;
+    min-width: 320px;
+  }
+
+  .checks label {
+    display: inline-block;
+    padding-top: .5em;
+    margin-top: 0;
+    margin-right: .5em;
+  }
+}
+
+/*Page header and navigation */
 .navigation-list_item--active {
   text-decoration: none;
 }
@@ -102,25 +226,25 @@ button:hover, button:focus {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  padding: 20px;
+  padding: 10px;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   background-color: #c0c0c0;
 }
 
 .page-header_item {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 200px;
-          flex: 0 1 200px;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
   width: 200px;
-  height: 200px;
+  height: 150px;
 }
 
 .page-header .page-header_item:last-child {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   text-align: right;
 }
 
@@ -135,9 +259,10 @@ button:hover, button:focus {
 
 .profile_portrait {
   float: left;
-  width: 250px;
-  margin-right: 40px;
-  border-radius: 50%;
+  width: 450px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  border-radius: 10%;
 }
 
 .profile {
@@ -148,23 +273,23 @@ button:hover, button:focus {
 
 .profile_text {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 100px;
-          flex: 1 1 100px;
+  -ms-flex: 1 1 100px;
+  flex: 1 1 100px;
 }
 
 /*Grid for work page*/
 
 .grid_item {
   display: inline-block;
-  width: 33%;
+  width: 50%;
 }
 
 @supports (display: grid) {
   .grid {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr 1fr ;
+    -ms-grid-columns: 1fr 20px 1fr 20px;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin: 0;
   }
@@ -179,13 +304,14 @@ button:hover, button:focus {
   }
 
   .grid_item:last-child {
-    -ms-grid-column: 3;
-    grid-column: 3/3;
+    -ms-grid-column: 2;
+    grid-column: 2/2;
     -ms-grid-row: 1;
     -ms-grid-row-span: 2;
-    grid-row: 1/3;
+    grid-row: 1/2;
   }
 }
+
 /* Footer */
 
 .page-footer {
@@ -195,14 +321,13 @@ button:hover, button:focus {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
-  margin: 0;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background-color: #c0c0c0;
+  padding-bottom: 105px;
+
 }
 
 main {
@@ -226,14 +351,16 @@ main {
 }
 
 /* Shared media */
-@media all and (max-width: 750px){
+@media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid_item:last-child {
     grid-column: auto/auto;
     grid-row: auto/auto;
   }
+
   h1 {
     font-size: 30px;
   }
@@ -244,49 +371,54 @@ button {
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: #00008b;    /*add my own color later */
+  background-color: #00008b;
+  /*add my own color later */
   color: white;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-       -o-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
   -webkit-transition-property: opacity;
   -o-transition-property: opacity;
   transition-property: opacity;
 }
+
 .button {
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: #00008b;    /*add my own color later */
+  background-color: #00008b;
+  /*add my own color later */
   color: white;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-       -o-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
   -webkit-transition-property: opacity;
   -o-transition-property: opacity;
   transition-property: opacity;
 }
+
 .my-input {
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: #00008b;    /*add my own color later */
+  background-color: #00008b;
+  /*add my own color later */
   color: white;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-       -o-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
   -webkit-transition-property: opacity;
   -o-transition-property: opacity;
   transition-property: opacity;
@@ -295,20 +427,22 @@ button {
 button:hover,
 button:focus,
 .button:hover,
-.button:focus
-{
+.button:focus {
   cursor: pointer;
   opacity: 0.8;
 }
+
 /* Animation */
 
 @-webkit-keyframes color-change {
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
@@ -318,9 +452,11 @@ button:focus,
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
@@ -329,67 +465,92 @@ button:focus,
 
 .sun {
   -webkit-animation-duration: 4s;
-          animation-duration: 4s;
+  animation-duration: 4s;
   -webkit-animation-name: color-change;
-          animation-name: color-change;
+  animation-name: color-change;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
-          animation-direction: alternate;
+  animation-direction: alternate;
   -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;          /*long way for animation */
+  animation-timing-function: linear;
+  /*long way for animation */
 }
 
 @-webkit-keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
+    transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
 
 @keyframes cloud-move {
   from {
     -webkit-transform: translate(0, 50px);
-            transform: translate(0, 50px);
+    transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
 
 .cloud-front {
   -webkit-animation: 25s cloud-move infinite alternate linear;
-          animation: 25s cloud-move infinite alternate linear;     /*short way for animation*/
+  animation: 25s cloud-move infinite alternate linear;
+  /*short way for animation*/
 }
 
 @-webkit-keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
   -webkit-animation: 20s cloud-move-reverse infinite alternate linear;
-          animation: 20s cloud-move-reverse infinite alternate linear;  /*  Animation:  Duration, name, iteration-count, direction, timing-function*/
+  animation: 20s cloud-move-reverse infinite alternate linear;
+  /*  Animation:  Duration, name, iteration-count, direction, timing-function*/
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr, 1fr, 1fr;
+  min-height: auto;
+  padding: 30px;
+  background-color: #00004e;
+  grid-gap: 30px;
+}
+
+.grid_item {
+  padding: 15px;
+  text-align: center;
+  font-size: large;
+  background-color: #a7d6e6;
+
+
 }
