--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 /*colors*/
 :root {
-  --primary-bg-color: #b0c4de;  /* body   background color*/
+  --primary-bg-color: #b0c4de;
+  /* body   background color*/
   --a-color: #357b70;
   --secondary-color: #e0b354;
   --dark-grey: #2b2b2b;
@@ -11,23 +12,24 @@
   --button-color: white;
   --sec-button-bg-color: #e0b354;
   --sec-button-color: #2b2b2b;
-  --grid-bg-color:  lightgray;
-  --page-header-color:  #c0c0c0;
-  --page-footer-color: #c0c0c0;
+  --grid-bg-color: lightgray;
+  --page-header-color: #838080;
+  --page-footer-color: #838080;
   --sun-0: #edc655;
   --sun-50: #fcffad;
   --sun-100: #f76414;
 }
+
 /* font */
 :root {
-  --body-font:    16px;
-  --h1-size:      30px;
-  --h2-size:      24px;
-  --h3-size:      18px;
-  --font-bold:    700;
-  --font-light:   400;
-  --line-large:   1.6;
-  --line-medium:  1.2;
+  --body-font: 16px;
+  --h1-size: 30px;
+  --h2-size: 24px;
+  --h3-size: 18px;
+  --font-bold: 700;
+  --font-light: 400;
+  --line-large: 1.6;
+  --line-medium: 1.2;
 }
 
 * {
@@ -36,7 +38,7 @@
 
 /*  Body */
 body {
-  font-family: 'Macondo', cursive;
+  font-family: sans-serif;
   font-weight: var(--font-light);
   font-size: var(--body-font);
   /*Sets font size to 16px*/
@@ -74,12 +76,14 @@ h3 {
 span {
   color: var(--span-color);
 }
+
 a {
   color: var(--primary-color);
   list-style-type: none;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   /* No underlining when hovering over a link */
   text-decoration: none;
 }
@@ -111,7 +115,8 @@ button {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-button:hover, button:focus {
+button:hover,
+button:focus {
   cursor: pointer;
   opacity: 0.8;
 }
@@ -156,7 +161,7 @@ button:hover, button:focus {
 
 .profile_portrait {
   float: left;
-  width: 250px;
+  width: 4000px;
   margin-right: 40px;
   border-radius: 50%;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -172,36 +177,8 @@ button:hover, button:focus {
   flex: 1 1 100px;
 }
 
-/*Grid for work page*/
 
-.grid_item {
-  display: inline-block;
-  width: 33%;
-}
 
-@supports (display: grid) {
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    grid-gap: 20px;
-    margin: 0 auto;
-    max-width: 10px;
-  }
-
-  .grid_item {
-    background-color: var(--grid-bg-color);
-    padding: 20px;
-    width: auto;
-    min-height: auto;
-    margin: 0;
-    border-radius: 5px;
-  }
-
-  .grid_item:last-child {
-    grid-column: 3/3;
-    grid-row: 1/3;
-  }
-}
 /* Footer */
 
 .page-footer {
@@ -209,7 +186,7 @@ button:hover, button:focus {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin: 0;
+  margin: auto 0;
   align-items: center;
   background-color: var(--page-footer-color);
   min-height: 100%;
@@ -234,14 +211,16 @@ main {
 }
 
 /* Shared media */
-@media all and (max-width: 750px){
+@media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid_item:last-child {
     grid-column: auto/auto;
     grid-row: auto/auto;
   }
+
   h1 {
     font-size: var(--h1-size);
   }
@@ -254,7 +233,8 @@ button,
   border: none;
   display: inline-block;
   font-family: inherit;
-  background-color: var(--button-bg-color);    /*add my own color later */
+  background-color: var(--button-bg-color);
+  /*add my own color later */
   color: var(--button-color);
   text-decoration: none;
   padding: 10px;
@@ -267,20 +247,22 @@ button,
 button:hover,
 button:focus,
 .button:hover,
-.button:focus
-{
+.button:focus {
   cursor: pointer;
   opacity: 0.8;
 }
+
 /* Animation */
 
 @keyframes color-change {
   0% {
     fill: var(--sun-0);
   }
+
   50% {
     fill: var(--sun-50);
   }
+
   100% {
     fill: var(--sun-100);
   }
@@ -292,31 +274,36 @@ button:focus,
   animation-name: color-change;
   animation-iteration-count: infinite;
   animation-direction: alternate;
-  animation-timing-function: linear;          /*long way for animation */
+  animation-timing-function: linear;
+  /*long way for animation */
 }
 
 @keyframes cloud-move {
   from {
     transform: translate(0, 50px);
   }
+
   to {
     transform: translate(200px, 50px);
   }
 }
 
 .cloud-front {
-  animation: 25s cloud-move infinite alternate linear;     /*short way for animation*/
+  animation: 25s cloud-move infinite alternate linear;
+  /*short way for animation*/
 }
 
 @keyframes cloud-move-reverse {
   from {
     transform: translate(446px, 48px);
   }
+
   to {
     transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
-  animation: 20s cloud-move-reverse infinite alternate linear;  /*  Animation:  Duration, name, iteration-count, direction, timing-function*/
+  animation: 20s cloud-move-reverse infinite alternate linear;
+  /*  Animation:  Duration, name, iteration-count, direction, timing-function*/
 }
